feat(metrologia): implementação do motor de cálculo WAAM e arquitetura SSOT
O objetivo deste commit é estabelecer a fundação matemática da Metodologia WAAM (Fase 2 - Custos de Deposição) no servidor, garantindo que o Back-end atue como a Única Fonte da Verdade (Single Source of Truth).

Decisões Arquiteturais e Padrões (Design Patterns / SOLID):
- Domain-Driven Design (DDD): Implementação da estratégia de herança relacional @Inheritance(strategy = InheritanceType.JOINED) na entidade abstrata 'Consumivel'. Isto normaliza a base de dados, separando atributos comerciais de parâmetros físicos específicos (ex: densidade para Arame, vazão para Gás), garantindo o Princípio do Aberto/Fechado (Open-Closed Principle) para futuras expansões.
- Prevenção de Anomalias Financeiras: Substituição integral de tipos flutuantes primitivos (double/float) por 'BigDecimal' com definição estrita de precisão (scale = 6). Isto previne perdas de dízimas em multiplicações de gramaturas, assegurando a integridade do custo do projeto.
- Contratos Imutáveis: Adoção de Java Records para a camada de DTOs. O encapsulamento imutável protege o payload durante o tráfego de rede, prevenindo o risco de 'LazyInitializationException' e a exposição acidental de dados sensíveis da entidade (ex: margens de lucro).
- Performance de I/O: Configuração da persistência orientada a uma unidade de estado sólido (SSD - Drive R) isolada. Isto mitiga a competição de leitura de disco (Disk Thrashing) com o sistema operativo, garantindo alta disponibilidade (latência em milissegundos) durante consultas concorrentes ao catálogo de insumos.